--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!--tailwind and daisyui-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!--font-awesome-->
+    <script src="https://kit.fontawesome.com/8a96e52550.js" crossorigin="anonymous"></script>
     <title>Legal System</title>
     <style>
         .eb-garamond {
@@ -18,7 +20,33 @@
         }
     </style>
 </head>
-<body>
+<body class=".eb-garamond">
+    <header>
+        <!--nav bar-->
+        <nav  class="max-w-screen-xl mx-auto">
+            <div class="flex  flex-col lg:flex-row justify-between items-center">
+                <div>
+                    <img src="./images/logo2.png" alt="">
+                </div>
+                <div class="flex flex-col lg:flex-row list-none gap-5 lg:gap-10 items-center text-[#707070] text-base font-normal">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Services<i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="">Cases <i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="">Blog<i class="fa-solid fa-chevron-right"></i></a></li>
+                    <li><a href="">Contact Us <i class="fa-solid fa-chevron-right"></i></a></li>
+                    <div><button class=" font-semibold text-lg btn bg-[#B68C5A] text-white rounded-lg">Free Consultation</button></div>
+                </div>
+            </div>
+
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 
