added banner section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </style>
 </head>
 <body class=".eb-garamond">
-    <header>
+    <header class="max-w-screen-lg mx-auto">
         <!--nav bar-->
-        <nav  class="max-w-screen-xl mx-auto">
+        <nav class="pt-14 pb-14">
             <div class="flex  flex-col lg:flex-row justify-between items-center">
                 <div>
                     <img src="./images/logo2.png" alt="">
@@ -39,6 +39,25 @@
             </div>
 
         </nav>
+        <!--banner Section-->
+        <section>
+            <div>
+                <div class="hero min-h-screen" style="background-image: url('./images/banner.png');">
+                    <div class="hero-overlay bg-opacity-60"></div>
+                    <div class="hero-content text-center text-neutral-content">
+                      <div class="">
+                        <h1 class="mb-5 text-7xl font-extrabold">We Provide Effective<br> Legal Solutions</h1>
+                        <p class="mb-5 text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.</p>
+                        <div class="space-x-3">
+                            <input type="text" placeholder="Search your services" class="input input-ghost  bg-white text-base" />
+                            <button class=" font-semibold text-xl  btn bg-[#B68C5A] text-white rounded-lg border-0">Search</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+
+        </section>
 
     </header>
     <main>
