added legal practice section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,78 @@
         </section>
 
     </header>
-    <main>
+    <main class="max-w-screen-lg mx-auto">
+        <!--Legal Practice Section-->
+        <section class="text-[#414040] text-center mt-32">
+            <div class="space-y-6">
+                <h3 class="font-extrabold text-4xl">The Legal Practice Area</h3>
+                <p class="font-normal text-base">There are many variations of passages of Lorem Ipsum available, but the majority have <br>suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-16">
+                <div class="card ">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/business.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Business Law</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+                <div class="card  rounded-none border-r-[1px] border-l-[1px]">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/criminal.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Criminal Law</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+                <div class="card ">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Child Support</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+                    
+                <div class="card  border-t-[1px] rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/education.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Education Law</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+                <div class="card border-t-[1px] rounded-none border-r-[1px] border-l-[1px]">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/divorce.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Divorce Law</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+                <div class="card border-t-[1px] rounded-none ">
+                    <figure class="px-10 pt-10">
+                      <img src="./images/tax.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-3xl font-extrabold">Tax Law</h2>
+                      <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                      <img src="./images/Frame.png" alt="">
+                    </div>
+                  </div>
+            </div>
+        </section>
+
 
     </main>
     <footer>
