--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         .eb-garamond {
             font-family: 'EB Garamond', serif;
         }
+        .bg-cover{
+            background-image: url('./images/banner.png');
+        }
     </style>
 </head>
 <body class=".eb-garamond">
@@ -128,6 +131,64 @@
                       <p class="text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                       <img src="./images/Frame.png" alt="">
                     </div>
+                  </div>
+            </div>
+        </section>
+        <!--client Section-->
+        <section class="mt-20">
+            <div>
+                <div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full">
+                        <div class="hero min-h-screen" style="background-image: url('./images/banner.png');">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                              <div class="">
+                                <img class="pl-[45%]" src="./images/Ellipse 1.png" alt="">
+                                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                                <h4>UIX Designer</h4>
+                                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                              </div>
+                            </div>
+                          </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a> 
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
+                    <div id="slide2" class="carousel-item relative w-full">
+                        <div class="hero min-h-screen" style="background-image: url('./images/banner.png');">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                              <div class="">
+                                <img class="pl-[45%]" src="./images/Ellipse 1.png" alt="">
+                                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                                <h4>UIX Designer</h4>
+                                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                              </div>
+                            </div>
+                          </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a> 
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
+                    <div id="slide3" class="carousel-item relative w-full">
+                        <div class="hero min-h-screen" style="background-image: url('./images/banner.png');">
+                            <div class="hero-overlay bg-opacity-60"></div>
+                            <div class="hero-content text-center text-neutral-content">
+                              <div class="">
+                                <img class="pl-[45%]" src="./images/Ellipse 1.png" alt="">
+                                <h3 class="mb-5 text-5xl font-bold">Awlad Hossain</h3>
+                                <h4>UIX Designer</h4>
+                                <p class="mb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                              </div>
+                            </div>
+                          </div>
+                      <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a> 
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                      </div>
+                    </div> 
                   </div>
             </div>
         </section>
