added FAQ  section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
         </section>
         <!--client Section-->
         <section class="mt-20">
+            <div class="space-y-6 text-center mb-16">
+                <h3 class="font-extrabold text-4xl text-[#414040]">What Our Client Say</h3>
+                <p class="font-normal text-base text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+            </div>
             <div>
                 <div class="carousel w-full">
                     <div id="slide1" class="carousel-item relative w-full">
@@ -192,7 +196,58 @@
                   </div>
             </div>
         </section>
-
+        <!--FAQ section-->
+        <section >
+            <div class="space-y-6 text-center mb-16 mt-32">
+                <h3 class="font-extrabold text-4xl text-[#414040]">Frequently Asked Any Questions</h3>
+                <p class="font-normal text-base text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class=>
+                <div class="hero  ">
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                      <img src="./images/faq.png" class="" />
+                      <div>
+                        <div class="collapse collapse-plus  space-y-4">
+                            <input type="radio" name="my-accordion-3" checked="checked" /> 
+                            <div class="collapse-title text-xl font-medium">
+                                Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content"> 
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" /> 
+                            <div class="collapse-title text-xl font-medium">
+                                Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content"> 
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" /> 
+                            <div class="collapse-title text-xl font-medium">
+                                Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content"> 
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" /> 
+                            <div class="collapse-title text-xl font-medium">
+                                Are application fee waivers available?
+                            </div>
+                            <div class="collapse-content"> 
+                              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</p>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
 
     </main>
     <footer>
