added footer  section

--- a/index.html
+++ b/index.html
@@ -313,9 +313,45 @@
         </section>
 
     </main>
-    <footer>
-
-    </footer>
+    <footer  class="bg-[#111] mt-32 ">
+        <div class="footer p-10 text-base-content max-w-screen-lg mx-auto text-[#CFCFCF] ">
+            <div>
+                <span class=" text-white"><img src="./images/logo.png" alt=""></span> 
+                <p>
+                    There are many variations of passages of<br> Lorem Ipsum<br> available, but the majority have<br> suffered alteration in some<br> form, by injected humour.
+                </p>
+              </div> 
+              <div>
+                <span class="footer-title">Usefull Link</span> 
+                <a class="link link-hover">Home</a> 
+                <a class="link link-hover">About us</a> 
+                <a class="link link-hover">Cases</a> 
+                <a class="link link-hover">Blog</a>
+                <a class="link link-hover">Contact Us</a>
+              </div> 
+              <div>
+                <span class="footer-title">Contact Now</span> 
+                <a class="link link-hover">555 4th 5t NW, Washington<br>
+                    DC 20530, United States</a> 
+                <a class="link link-hover">+88 01750 000 000<br>
+                    +88 01750 000 000</a> 
+                <a class="link link-hover">info@gmail.com<br>
+                    info@gmail.com</a>
+              </div> 
+              <div>
+                <span class="footer-title">Subscribe</span> 
+                <div class="form-control w-80">
+                  <label class="label">
+                    <span class="text-white">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</span>
+                  </label> 
+                  <div class="relative">
+                    <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
+                    <button class="btn btn-primary absolute top-0 right-0 rounded-l-none bg-[#B68C5A] border-none"><i class="fa-solid fa-location-arrow"></i></button>
+                  </div>
+                </div>
+              </div>
+        </div>
+      </footer>
 
 </body>
 
